--- a/robot3_7.ipynb
+++ b/robot3_7.ipynb
@@ -237,7 +237,7 @@
         "\n",
         "I think that a useful insight I gained from this experiment is that with the discount factor, the state values converged to values which made it clear which path to take e.g if you were to employ a greedy policy, it would know momentarily which actions to take. With the scenario where we don't have a discount, if we would employ a greedy policy we would have to optimize it. Hence, the discount served as a \"punishment\" for not escaping the exit quickly. \n",
         "\n",
-        "An alternative way to encourage the agent to escape the maze as quickly as possible is to put a reward of $-1$ for a transition. This way the robot will maximize its return by escaping the maze as quickly as possible. FUTURE WORK: WRITE AN ALGORITHM WHICH CALCULATE $V^*$ and $\pi^*$"
+        "An alternative way to encourage the agent to escape the maze as quickly as possible is to put a reward of $-1$ for a transition. This way the robot will maximize its return by escaping the maze as quickly as possible. FUTURE WORK: WRITE AN ALGORITHM WHICH CALCULATE $V^*$ and $\\pi^*$"
       ],
       "metadata": {
         "id": "BIjHjEWmSE_v"
