--- a/robot3_7.ipynb
+++ b/robot3_7.ipynb
@@ -4,7 +4,10 @@
   "metadata": {
     "colab": {
       "name": "robot3_7.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNItiS1bUylVx4rVG5JLKU/",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +18,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/yakovsushenok/RLBookProgrammingSolutions/blob/main/robot3_7.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -56,7 +69,7 @@
       "metadata": {
         "id": "hfGB73NzSJTQ"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -78,9 +91,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XQUnSO8xSP72",
-        "outputId": "8634a4b2-cdb8-4af4-f9ff-33c0f5572ce1"
+        "outputId": "61b7f40e-6a44-427f-cb3a-e3ce3f7a39f3"
       },
-      "execution_count": 110,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,7 +186,7 @@
       "metadata": {
         "id": "LBTBdtOpTKnO"
       },
-      "execution_count": 111,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -197,9 +210,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lnwlltGOP4Sy",
-        "outputId": "054014c1-3eae-424a-87b2-9972cf07f137"
+        "outputId": "659eb5d6-e56b-4886-9920-9d42afbf4229"
       },
-      "execution_count": 109,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,15 +246,124 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We can see that the policies with discounts give states closer to the exit higher values as opposed to the values in the scenario where there is no discount. This is due to the fact that the closer the cell is to the exit, the sooner it can get a reward of $+1$ without it being discounted too much as opposed to the cells that are further away. We can see that the scenario with no discount has all of its state values converged to $1$. This should make sense since when the robot starts at some cell (state), it will eventually get to the exit and get a reward of $+1$, whever it is after $2$ steps of after $1000$ steps. \n",
+        "The exercise assumes that this episodic task doesn't have a discount factor and that's why the robot doesn't \"improve\", i.e. find an optimal path to the exit. We can see this in the case where $\\gamma = 1$ - there is no discount and all of the states yield the same reward which is $1$. We can see this by writing out the return at time $t$:\n",
         "\n",
-        "I think that a useful insight I gained from this experiment is that with the discount factor, the state values converged to values which made it clear which path to take e.g if you were to employ a greedy policy, it would know momentarily which actions to take. With the scenario where we don't have a discount, if we would employ a greedy policy we would have to optimize it. Hence, the discount served as a \"punishment\" for not escaping the exit quickly. \n",
+        "$$G_t = R_{t+1} + R_{t+2} +...+R_{T} = R_{T} = 1$$\n",
         "\n",
-        "An alternative way to encourage the agent to escape the maze as quickly as possible is to put a reward of $-1$ for a transition. This way the robot will maximize its return by escaping the maze as quickly as possible. FUTURE WORK: WRITE AN ALGORITHM WHICH CALCULATES $V^*$ and $\\pi^*$"
+        "So this means that at each time step, given we use the greedy policy, we would pick a random state to go to (because each state would be the maximum). This makes the agent not have a designated path towards the exit and it will just go in circles, choosing random actions, until it randomly takes an exit (goes into the terminal state).\n",
+        "\n",
+        "On the other hand when $\\gamma \\in (0,1)$ the return at time step $t$ will be \n",
+        "\n",
+        "$$G_t = R_{t+1} + \\gamma R_{t+2} + ... + \\gamma^{T-t-1} R_T = R_T\\gamma^{T-t-1} = (1)\\gamma^{T-t-1}=\\gamma^{T-t-1}$$ \n",
+        "\n",
+        "We can see that if $t$ is close to $T$, then the reward is bigger. E.g. let $\\gamma = 0.9$, $T=5$ and $t_1= 2$ and $t_2=4$ ($t_1$ and $t_2$ are time steps in different episodes), then\n",
+        "\n",
+        " $$G_{t_1} = G_2 = \\gamma^{5-2-1}= \\gamma^{2} = 0.9^2 = 0.81 < G_{t_2} = G_4 = \\gamma^{5-4-1} = \\gamma^{0} = 1$$\n",
+        "\n",
+        "This means that the states which are closer to the terminal state clearly get to the terminal state faster, hence their value goes up. \n",
+        "\n",
+        "Another way of solving this problem is to change the rewards themselves, so that at each time step, the reward is $-1$ and at the terminal state it's $0$. So this will \"punish\" the agent for staying long in the maze, just like with the case where we have discounts. In the following code you will see that this is indeed the case."
       ],
       "metadata": {
-        "id": "BIjHjEWmSE_v"
+        "id": "si8UMO86sRud"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def maze(s):\n",
+        "  maze = -1*np.ones((s, s))\n",
+        "  maze[0,0], maze[-1,-1] = 0, 0\n",
+        "  return maze\n",
+        "print(maze(4))\n",
+        "\n",
+        "def robot_experiment(iterations, discount, maze_size):\n",
+        "  ITERATIONS = iterations\n",
+        "  grid = maze(maze_size)\n",
+        "  gridCollection = [maze(4)]\n",
+        "  probs = np.array([0.25, 0.25, 0.25, 0.25])\n",
+        "  for iter in range(ITERATIONS):\n",
+        "      for row in range(grid.shape[0]):\n",
+        "        for col in range(grid.shape[1]):\n",
+        "          index = [row, col]\n",
+        "          rowID, colID = findCells(index, grid)\n",
+        "          if rowID == None or colID == None:\n",
+        "            grid[row, col] = grid[row, col]\n",
+        "          else:\n",
+        "            last_grid = gridCollection[iter]\n",
+        "            grid[row, col] = discount*last_grid[rowID, colID] @ probs\n",
+        "      new_grid = grid.copy()\n",
+        "      gridCollection.append(new_grid)\n",
+        "      if (iter+1)% iterations==0:\n",
+        "        print(f\"Iteration: {iter+1}, grid:\")\n",
+        "        print(grid)\n",
+        "        print(\"\\n\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "opIPApMvvEut",
+        "outputId": "39c6cf61-7f94-4e38-ae72-0394e8924b31"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0. -1. -1. -1.]\n",
+            " [-1. -1. -1. -1.]\n",
+            " [-1. -1. -1. -1.]\n",
+            " [-1. -1. -1.  0.]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "robot_experiment(200, 0.1, 4)\n",
+        "robot_experiment(200, 0.9, 4)\n",
+        "robot_experiment(200, 1, 4)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SAojaSvfvQmn",
+        "outputId": "8f90e3a0-fbbe-4e99-ca06-6369c03669e6"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Iteration: 200, grid:\n",
+            "[[ 0.00000000e+000 -1.29049831e-205 -1.91228610e-205 -2.13996124e-205]\n",
+            " [-1.29049831e-205 -1.68461097e-205 -1.89949420e-205 -1.91228610e-205]\n",
+            " [-1.91228610e-205 -1.89949420e-205 -1.68461097e-205 -1.29049831e-205]\n",
+            " [-2.13996124e-205 -1.91228610e-205 -1.29049831e-205  0.00000000e+000]]\n",
+            "\n",
+            "\n",
+            "Iteration: 200, grid:\n",
+            "[[ 0.00000000e+00 -9.10456764e-15 -1.34913297e-14 -1.50975958e-14]\n",
+            " [-9.10456764e-15 -1.18850636e-14 -1.34010818e-14 -1.34913297e-14]\n",
+            " [-1.34913297e-14 -1.34010818e-14 -1.18850636e-14 -9.10456764e-15]\n",
+            " [-1.50975958e-14 -1.34913297e-14 -9.10456764e-15  0.00000000e+00]]\n",
+            "\n",
+            "\n",
+            "Iteration: 200, grid:\n",
+            "[[ 0.00000000e+00 -1.29049831e-05 -1.91228610e-05 -2.13996124e-05]\n",
+            " [-1.29049831e-05 -1.68461097e-05 -1.89949420e-05 -1.91228610e-05]\n",
+            " [-1.91228610e-05 -1.89949420e-05 -1.68461097e-05 -1.29049831e-05]\n",
+            " [-2.13996124e-05 -1.91228610e-05 -1.29049831e-05  0.00000000e+00]]\n",
+            "\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
