Fixed the value update when r = -1

--- a/robot3_7.ipynb
+++ b/robot3_7.ipynb
@@ -6,7 +6,7 @@
       "name": "robot3_7.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNItiS1bUylVx4rVG5JLKU/",
+      "authorship_tag": "ABX9TyMxOgKjNXtNtV1C6ilVtFIK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -93,7 +93,7 @@
         "id": "XQUnSO8xSP72",
         "outputId": "61b7f40e-6a44-427f-cb3a-e3ce3f7a39f3"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,7 +186,7 @@
       "metadata": {
         "id": "LBTBdtOpTKnO"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -212,7 +212,7 @@
         "id": "lnwlltGOP4Sy",
         "outputId": "659eb5d6-e56b-4886-9920-9d42afbf4229"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -287,11 +287,12 @@
         "        for col in range(grid.shape[1]):\n",
         "          index = [row, col]\n",
         "          rowID, colID = findCells(index, grid)\n",
+        "          #print(rowID, colID)\n",
         "          if rowID == None or colID == None:\n",
         "            grid[row, col] = grid[row, col]\n",
         "          else:\n",
         "            last_grid = gridCollection[iter]\n",
-        "            grid[row, col] = discount*last_grid[rowID, colID] @ probs\n",
+        "            grid[row, col] = (-1+discount*last_grid[rowID, colID]) @ probs \n",
         "      new_grid = grid.copy()\n",
         "      gridCollection.append(new_grid)\n",
         "      if (iter+1)% iterations==0:\n",
@@ -304,9 +305,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "opIPApMvvEut",
-        "outputId": "39c6cf61-7f94-4e38-ae72-0394e8924b31"
+        "outputId": "b8fa997c-63ed-45e4-a02f-3912a4095d21"
       },
-      "execution_count": 14,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -323,42 +324,42 @@
     {
       "cell_type": "code",
       "source": [
-        "robot_experiment(200, 0.1, 4)\n",
-        "robot_experiment(200, 0.9, 4)\n",
-        "robot_experiment(200, 1, 4)"
+        "robot_experiment(500, 0.1, 4)\n",
+        "robot_experiment(500, 0.9, 4)\n",
+        "robot_experiment(500, 1, 4)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SAojaSvfvQmn",
-        "outputId": "8f90e3a0-fbbe-4e99-ca06-6369c03669e6"
+        "outputId": "5270be20-4b7e-45f2-cda7-3e49513240ba"
       },
-      "execution_count": 15,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Iteration: 200, grid:\n",
-            "[[ 0.00000000e+000 -1.29049831e-205 -1.91228610e-205 -2.13996124e-205]\n",
-            " [-1.29049831e-205 -1.68461097e-205 -1.89949420e-205 -1.91228610e-205]\n",
-            " [-1.91228610e-205 -1.89949420e-205 -1.68461097e-205 -1.29049831e-205]\n",
-            " [-2.13996124e-205 -1.91228610e-205 -1.29049831e-205  0.00000000e+000]]\n",
+            "Iteration: 500, grid:\n",
+            "[[ 0.         -1.08256548 -1.1103754  -1.11107239]\n",
+            " [-1.08256548 -1.10967841 -1.11100269 -1.1103754 ]\n",
+            " [-1.1103754  -1.11100269 -1.10967841 -1.08256548]\n",
+            " [-1.11107239 -1.1103754  -1.08256548  0.        ]]\n",
             "\n",
             "\n",
-            "Iteration: 200, grid:\n",
-            "[[ 0.00000000e+00 -9.10456764e-15 -1.34913297e-14 -1.50975958e-14]\n",
-            " [-9.10456764e-15 -1.18850636e-14 -1.34010818e-14 -1.34913297e-14]\n",
-            " [-1.34913297e-14 -1.34010818e-14 -1.18850636e-14 -9.10456764e-15]\n",
-            " [-1.50975958e-14 -1.34913297e-14 -9.10456764e-15  0.00000000e+00]]\n",
+            "Iteration: 500, grid:\n",
+            "[[ 0.         -5.27781359 -7.12840015 -7.65050922]\n",
+            " [-5.27781359 -6.60629109 -7.18061106 -7.12840015]\n",
+            " [-7.12840015 -7.18061106 -6.60629109 -5.27781359]\n",
+            " [-7.65050922 -7.12840015 -5.27781359  0.        ]]\n",
             "\n",
             "\n",
-            "Iteration: 200, grid:\n",
-            "[[ 0.00000000e+00 -1.29049831e-05 -1.91228610e-05 -2.13996124e-05]\n",
-            " [-1.29049831e-05 -1.68461097e-05 -1.89949420e-05 -1.91228610e-05]\n",
-            " [-1.91228610e-05 -1.89949420e-05 -1.68461097e-05 -1.29049831e-05]\n",
-            " [-2.13996124e-05 -1.91228610e-05 -1.29049831e-05  0.00000000e+00]]\n",
+            "Iteration: 500, grid:\n",
+            "[[  0. -14. -20. -22.]\n",
+            " [-14. -18. -20. -20.]\n",
+            " [-20. -20. -18. -14.]\n",
+            " [-22. -20. -14.   0.]]\n",
             "\n",
             "\n"
           ]
